TPDDS2017_GRUPO13_DONDE_INVIERTO/ANTLR/ANTLR/GMetodologias.g4
grammar GMetodologias;

metodologia: INDICADOR OPERADOR INDICADOR;

OPERADOR: '>'|'<'|'=';
INDICADOR: ('a'..'z')+ | ('A'..'Z')+ ;

compileUnit
	:	EOF
	;

/*
 * Lexer Rules
 */

WS
	:	' ' -> channel(HIDDEN)
	;
